fixing overflow problems on iOS webkit

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -114,6 +114,9 @@ p {
 
 .content-wrapper {
   overflow-x: hidden;
+  position: relative;
+  width: 100%;
+  width: 100vw;
 }
 
 .content-wrapper > section {
